--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ concurrent-map = "5.0.27"
 [features]
 
 # If you have set up Dash and want to use Dash index, change "rust_dash" to "dash".
-default = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "order_status_clock", "clwb_delta"]
+default = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "deliver_clock", "clwb_delta"]
 
 option = ["ycsb_f", "sysname", "tpcc"]
 
@@ -45,7 +45,7 @@ basic = ["dash", "nvm_server", "local_allocator", "serializable"]
 basic_dram = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable"]
 
 # choose one of system
-sysname = ["Falcon"]
+sysname = ["Falcon_No_Flush"]
 Falcon = ["n2db_local", "ilog", "clwb_tuple", "hot_unflush"]
 Falcon_All_Flush = ["n2db_local", "ilog", "clwb_tuple"]
 Falcon_No_Flush = ["n2db_local", "ilog"]
@@ -163,6 +163,7 @@ payment_clock = []
 new_order_clock = []
 stock_level_clock = []
 order_status_clock = []
+deliver_clock = []
 tpcc = []
 
 
