fix tpcc-full, outp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,15 +37,15 @@ concurrent-map = "5.0.27"
 [features]
 
 # If you have set up Dash and want to use Dash index, change "rust_dash" to "dash".
-default = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "deliver_clock", "clwb_delta"]
+default = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "new_order_clock", "clwb_delta"]
 
-option = ["ycsb_f", "sysname", "tpcc"]
+option = ["ycsb_f", "sysname"]
 
-basic = ["dash", "nvm_server", "local_allocator", "serializable"]
+basic = ["dash", "rust_map", "nvm_server", "local_allocator", "serializable"]
 basic_dram = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable"]
 
 # choose one of system
-sysname = ["Falcon_No_Flush"]
+sysname = ["ZenS"]
 Falcon = ["n2db_local", "ilog", "clwb_tuple", "hot_unflush"]
 Falcon_All_Flush = ["n2db_local", "ilog", "clwb_tuple"]
 Falcon_No_Flush = ["n2db_local", "ilog"]
