--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ basic = ["dash", "rust_map", "nvm_server", "local_allocator", "serializable"]
 basic_dram = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable"]
 
 # choose one of system
-sysname = ["ZenS"]
+sysname = ["Falcon"]
 Falcon = ["n2db_local", "ilog", "clwb_tuple", "hot_unflush"]
 Falcon_All_Flush = ["n2db_local", "ilog", "clwb_tuple"]
 Falcon_No_Flush = ["n2db_local", "ilog"]
