--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ concurrent-map = "5.0.27"
 [features]
 
 # If you have set up Dash and want to use Dash index, change "rust_dash" to "dash".
-default = ["rust_dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "new_order_clock", "clwb_delta"]
+default = ["dash", "rust_map", "nvm_server", "local_allocator", "serializable", "local_cc_cfg_occ", "option", "txn_clock", "new_order_clock", "clwb_delta"]
 
 option = ["ycsb_f", "sysname"]
 
